using gwenview icon

--- a/metadata.desktop
+++ b/metadata.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Comment=Dagadu Generator
 Encoding=UTF-8
-Icon=applications-education-language
+Icon=gwenview
 Keywords=
 Name=Dagadu QML
 Type=Service
